--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>BASSEY WILLIAMS</title>
+    <title>BILLZ GRAPHICS</title>
     <link rel="stylesheet" href="CSS/styles.css" />
     <link rel="icon" href="CSS-MY SITE\favicon (1).ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -75,7 +75,7 @@
         >Instagram</a
       >
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www./">Website</a>
+      <a class="footer-link" href="https://mcbillz.github.io/billzgraphics/">Website</a>
       <p class="cr">© 2020 Billz Graphics.</p>
     </div>
   </body>
