--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           I am a graphics designer and web developer with so much passion for
           tech and crypto currencies, in my free time i like to watch movies,
           listen to music, hangout with friends or source for the latest and
-          relevant informantion on the internet.
+          relevant information on the internet.
         </p>
       </div>
       <hr />
