--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>BILLZ GRAPHICS</title>
+    <title>BASSEY WILLIAMS</title>
     <link rel="stylesheet" href="CSS/styles.css" />
     <link rel="icon" href="CSS-MY SITE\favicon (1).ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,7 +33,7 @@
           I am a graphics designer and web developer with so much passion for
           tech and crypto currencies, in my free time i like to watch movies,
           listen to music, hangout with friends or source for the latest and
-          relevant information on the internet.
+          relevant informantion on the internet.
         </p>
       </div>
       <hr />
@@ -58,13 +58,68 @@
         </div>
       </div>
       <hr />
+
+      <h2>Prices</h2>
+      <div class="prices">
+        <div class="growth" data-aos="flip-left" data-aos-duration="2000">
+          <div class="gd">
+            <p style="color: black; margin: 0 0 0 0; font-size: 1.5rem">
+              Portraits
+            </p>
+          </div>
+          <div class="gd2">
+            <p>1 face - $30</p>
+            <p>2-3 face - $40</p>
+            <p>4 face - $50</p>
+            <p style="font-size: 0.8rem; margin-top: 4rem">
+              +10 for additional faces
+            </p>
+          </div>
+        </div>
+
+        <div class="growth" data-aos="flip-left" data-aos-duration="2000">
+          <div class="gdt">
+            <p style="color: black; margin: 0 0 0 0; font-size: 1.5rem">
+              Designs
+            </p>
+          </div>
+          <div class="gd2">
+            <p>Logo - $40</p>
+            <p>Business cards - $50</p>
+            <p>Fliers/Posters - $70</p>
+            <p>Cover Arts - $80</p>
+            <p style="font-size: 0.8rem; margin-top: 4rem"></p>
+          </div>
+        </div>
+
+        <div class="growth" data-aos="flip-left" data-aos-duration="2000">
+          <div class="gdth">
+            <p style="color: black; margin: 0 0 0 0; font-size: 1.5rem">
+              Animations
+            </p>
+          </div>
+          <div class="gd2">
+            <p style="font-size: 1rem">2D music videos - $120/min</p>
+            <p style="font-size: 1rem">3D music videos - $250/min</p>
+            <p style="font-size: 1rem">Lyric videos - $100/min</p>
+            <p style="font-size: 1rem">ADS - $100/min</p>
+            <p style="font-size: 0.8rem; margin-top: 2rem">
+              prices are subject to negotiation
+            </p>
+          </div>
+        </div>
+      </div>
+      <p style="margin-top: 5rem; font-size: 1rem">
+        * For web development jobs please kindly contact me
+      </p>
+      <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Have you been in search for someone with my skill set?</h3>
         <p>
           Reach out let's get your business on the map with outstanding designs.
         </p>
-        <a id="cm" class="btn" href="mailto:110peejay@gmail.com"
+        <a id="cm" class="btn" href="mailto:bassnet.easy@gmail.com"
           >CONTACT ME</a
         >
       </div>
@@ -75,7 +130,7 @@
         >Instagram</a
       >
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://mcbillz.github.io/billzgraphics/">Website</a>
+      <a class="footer-link" href="https://www./">Website</a>
       <p class="cr">© 2020 Billz Graphics.</p>
     </div>
   </body>
