--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p>
           Reach out let's get your business on the map with outstanding designs.
         </p>
-        <a id="cm" class="btn" href="mailto:bassnet.easy@gmail.com"
+        <a id="cm" class="btn" href="mailto:110peejay@gmail.com"
           >CONTACT ME</a
         >
       </div>
